# CryptoRockets

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  scanner.py  temp_compile_stmt.py
.github/workflows/: dev.yml  main.yml
app/: main.py  utils.py
app/adapters/: alerts.py  base.py  redis.py
app/api/: exceptions.py
app/api/dependencies/: auth.py  base.py  stubs.py
app/api/dto/: base.py
app/api/dto/ads/: request.py  response.py
app/api/dto/game/: request.py  response.py
app/api/dto/shop/: request.py  response.py
app/api/dto/user/: request.py  response.py
app/api/dto/user_task/: response.py
app/api/middlewares/: logs.py
app/api/routes/: ads.py  callbacks.py  docs.py  game.py  shop.py  task.py  telegram.py  user.py  user_task.py
app/config/: config.py  constants.py
app/db/: models.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001.py  0002.py  0003.py  0004.py  0005.py  0006.py  0007.py  0008.py  0009.py  0010.py  0011.py  0012.py  0013.py  0014.py  0015.py  0016.py  0017.py  0018.py  0019.py  0020.py  0021.py  0022.py  0023.py  0024.py  0025.py  0026.py  0027.py
app/db/repos/: ads.py  game.py  shop.py  task.py  transaction.py  user.py  user_task.py
app/db/repos/base/: base.py  repos.py
app/init/: base_models.py  db.py  exceptions.py  logs.py  middlewares.py  oltp.py  openapi.py  routes.py
app/services/: ads.py  auth.py  bot.py  docs.py  game.py  shop.py  task.py  transaction.py  user.py  user_task.py  websocket.py
app/services/base/: base.py  services.py
app/services/dto/: auth.py  shop.py  transaction.py  websocket.py
app/telegram/: dispatcher.py  dto.py  patches.py
app/telegram/keyboards/: start.py
app/telegram/routes/: payment.py  start.py
cron/: cron.py  crontab.dev  crontab.prod
deploy-cryptorockets/: Dockerfile  dev.docker-compose.yml  docker-compose.yml  gunicorn_config.py  prod.docker-compose.yml  scanner.Dockerfile
deploy-cryptorockets/grafana/: datasources.yaml
deploy-cryptorockets/grafana/logs/: loki-config.yaml
i18n/: service.py
i18n/translations/: en.json  ru.json
